<resources>
    <string name="app_name">ESGI-SmartPlayer</string>
    <string name="title_home">Home</string>
    <string name="title_playlist_list">Playlists</string>
    <string name="title_upload">Upload</string>
    <string name="title_download">Download</string>
    <string name="title_profile">Profile</string>
    <string name="title_music">Music</string>
    <string name="playlist">Playlist</string>
    <string name="title_activity_authentication">Login</string>
    <string name="username">username</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="name">name</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="username_or_email">username</string>
    <string name="artist">Artist</string>
    <string name="server_url">http://192.168.1.32:8082/</string>
    <string name="server_url_prod">https://pa-server-2020.herokuapp.com/</string>
    <string name="register_success">User registered successfully!</string>
</resources>
