<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_playlists"
        android:icon="@drawable/ic_queue_music_black_24dp"
        android:title="@string/title_playlist_list" />

    <item
        android:id="@+id/navigation_music"
        android:icon="@drawable/ic_baseline_music_note_24"
        android:title="@string/title_music" />

    <item
        android:id="@+id/navigation_upload"
        android:icon="@drawable/ic_file_upload_black_24dp"
        android:title="@string/title_upload" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_profile" />

</menu>
