<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_upload">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.esgipa.smartplayer.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_playlists_list"
        android:name="com.esgipa.smartplayer.ui.playlists.PlaylistListFragment"
        android:label="@string/title_playlist_list"
        tools:layout="@layout/fragment_playlist_list" />

    <fragment
        android:id="@+id/navigation_upload"
        android:name="com.esgipa.smartplayer.ui.upload.UploadFragment"
        android:label="@string/title_upload"
        tools:layout="@layout/fragment_upload" />

    <fragment
        android:id="@+id/navigation_playlists"
        android:name="com.esgipa.smartplayer.ui.playlists.PlaylistFragment"
        android:label="@string/title_playlist_list"
        tools:layout="@layout/fragment_playlist" />

    <fragment
        android:id="@+id/navigation_playlist_creation"
        android:name="com.esgipa.smartplayer.ui.playlists.PlaylistCreationFragment"
        android:label="@string/title_playlist_list"
        tools:layout="@layout/fragment_playlist_creation" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.esgipa.smartplayer.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_music"
        android:name="com.esgipa.smartplayer.ui.music.MusicFragment"
        android:label="@string/title_music"
        tools:layout="@layout/fragment_music" />
</navigation>
